--- a/new.htm
+++ b/new.htm
@@ -6,8 +6,10 @@
 </head>
 <body>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     * {
       box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
     :root {
       --primary-color: #22254b;
