--- a/new.htm
+++ b/new.htm
@@ -12,8 +12,8 @@
       font-family: 'Poppins', sans-serif;
     }
     :root {
-      --primary-color: #22254b;
-      --secondary-color: #373b69;
+      --primary-color: #fff;
+      --secondary-color: lightgrey;
       
     }
     body {
