--- a/new.htm
+++ b/new.htm
@@ -61,7 +61,7 @@
       width: 100%;
     }
     .movie-info {
-      color: #eee;
+      color: black;
       display: flex;
       align-items: center;
       justify-content: space-between;
