--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     body {
       background-color: #f0f0f0;
     }
+    .container {
+      background-color: #fff;
+      width: 100%;
+    }
    
   </style>
-  <div> 
+  <div class="container"> 
     
-<!--under maintenance-->
-    
+  </div>
 </body>
 </html>
