--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       background-color: #fff;
       width: 100%;
     }
+    img {
+      width: 500px;
+      height: 250px;
+    }
    
   </style>
   <div class="container"> 
