--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       width: 100%;
     }
     img {
+      display: block;
+      margin: auto;
       width: 500px;
       height: 250px;
     }
