--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
       width: 200px;
       height: 250px;
     }
-   
+   h1 {
+  font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+    }
   </style>
   <div class="container"> 
     <img src="https://media.pitchfork.com/photos/5f08e1ae9f0d624cf3ecafc7/1:1/w_4500,h_4500,c_limit/legends%20never%20die_juice%20wrld.jpg" />
   </div>
+  <center><h1>Juice wrld dedicated </h1></center>
 </body>
 </html>
