--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
    h1 {
   font-size: 72px;
-  background: -webkit-linear-gradient(#eee, #333);
+  background: #f2b1e5;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
     }
