--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
    h1 {
   font-size: 72px;
-  background: #f2b1e5;
+  background-color: #f2b1e5;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
     }
