--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <div class="container"> 
     <img src="https://media.pitchfork.com/photos/5f08e1ae9f0d624cf3ecafc7/1:1/w_4500,h_4500,c_limit/legends%20never%20die_juice%20wrld.jpg" />
   </div>
-  <center><h1 class="display-1">>Juice wrld dedicated </h1></center>
+  <center><h1 class="display-1">Juice wrld dedicated </h1></center>
 </body>
 </html>
