--- a/index.html
+++ b/index.html
@@ -11,19 +11,10 @@
     body {
       background-color: #f0f0f0;
     }
-    .container {
-      background-color: #fff;
-      width: 100%;
-    }
-    img {
-      display: block;
-      margin: auto;
-      width: 200px;
-      height: 150px;
-    }
   
   </style>
-  <div class="container"> 
+  <h1 class="display-1">Top picks</h1>
+  
   
 </body>
 </html>
