--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 <body>
   <style>
     body {
-      background-color: #f0f0f0;
+      background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/79fe83d4-7ef6-4181-9439-46db72599559/296a32a7-870c-4ebe-a49c-0f4223eff344/KR-en-20221017-popsignuptwoweeks-perspective_alpha_website_large.jpg");
+      
+      
+    }
+    a {
+    text-decoration: none;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      background-color: red;
+      padding: 12px;
+      border-radius: 99px;
     }
   
   </style>
-  <h1 class="display-1">Top picks</h1>
-  
+  <a href="22.htm">Enter</a>
   
 </body>
 </html>
