--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <style>
     body {
       background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/79fe83d4-7ef6-4181-9439-46db72599559/296a32a7-870c-4ebe-a49c-0f4223eff344/KR-en-20221017-popsignuptwoweeks-perspective_alpha_website_large.jpg");
-      
-      
+      background-size: cover;
     }
     a {
     text-decoration: none;
