--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       background-color: red;
       padding: 12px;
       border-radius: 99px;
+      margin-top: 140px;
+      margin-left: 250px;
+      font-weight: bold;
     }
   
   </style>
