--- a/index.html
+++ b/index.html
@@ -9,24 +9,13 @@
 <body>
   <style>
     body {
-      background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/79fe83d4-7ef6-4181-9439-46db72599559/296a32a7-870c-4ebe-a49c-0f4223eff344/KR-en-20221017-popsignuptwoweeks-perspective_alpha_website_large.jpg");
-      background-size: cover;
+      
     }
-    a {
-    text-decoration: none;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      background-color: red;
-      padding: 12px;
-      border-radius: 99px;
-      margin-top: 140px;
-      margin-left: 250px;
-      font-weight: bold;
-    }
-  
+   
   </style>
-  <a href="22.htm">Enter</a>
+  
+  
+      <a href="Oindex.html"><img id="dil_bechara" class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/lMFjMrc8Bn0CQhtJDORfspXrWrK.jpg" alt="dil-bechara"></a>
   
 </body>
 </html>
