--- a/Oindex.html
+++ b/Oindex.html
@@ -36,6 +36,7 @@ body {  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 
 </script>
 
 <body>  <br>
+    <center> <h1>Press the Play button 3 or 4 times ,if there are ads popping up</h1></center>
   
  <center><iframe src="https://sltube.org/e/eLMEmnArrWgDgPvq" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" width="800" height="600" allowfullscreen></iframe>
     <center/>
