--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     body {
       
     }
+    .movie__container {
+    width: 150px;
+    }
     #dil_bechara {
     width: 100%;
       height: 300px;
