--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
     .movie__container {
     width: 150px;
       height: auto;
+      margin-left: 30px;
     }
     #dil_bechara {
     width: 100%;
       height: 300px;
-       border-radius: 10px;
+       border-radius: 10px 10px 0px 0px;
       
+    }
+    .extra__txt {
+      display: block;
+      margin: auto;
     }
   </style>
   <div class="movie__container">
