--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     body {
       
     }
     .movie__container {
     width: 150px;
       height: auto;
-      margin-left: 30px;
+      margin-left: 20px;
+      backround-color: #f0f0f0;
+      border-radius: 10px;
     }
     #dil_bechara {
     width: 100%;
@@ -25,6 +28,7 @@
     .extra__txt {
       display: block;
       margin: auto;
+      font-family: 'Poppins', sans-serif;
     }
   </style>
   <div class="movie__container">
