--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     .extra__txt {
       display: block;
       margin: auto;
+      padding-left: 19px;
       font-family: 'Poppins', sans-serif;
     }
   </style>
