--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     .movie__container {
     width: 150px;
-      height: auto;
+      height: 75px;
       margin-left: 20px;
       backround-color: #f0f0f0;
       border-radius: 10px;
