--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     body {
-      
+      background-color: #f0f0f0;
     }
     .movie__container {
     width: 150px;
       height: 75px;
       margin-left: 20px;
-      backround-color: #f0f0f0;
+ 
       border-radius: 10px;
     }
     #dil_bechara {
     width: 100%;
-      height: 300px;
+      height: 250px;
        border-radius: 10px 10px 0px 0px;
       
     }
@@ -30,6 +30,7 @@
       margin: auto;
       padding-left: 19px;
       font-family: 'Poppins', sans-serif;
+           backround-color: #fff;
     }
   </style>
   <div class="movie__container">
