--- a/index.html
+++ b/index.html
@@ -41,5 +41,14 @@
    Dil Bechara
     </div>
   </div>
+  
+   <div class="movie__container">
+       
+       
+      <a href="Oindex.html"><img id="dil_bechara" class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/dspwDOosidQT85oPDDHMM9zmaLw.jpg" alt="dil-bechara"></a>
+ <div class="extra__txt">
+   Chopsticks
+    </div>
+  </div>
 </body>
 </html>
