--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
     body {
-      background-color: #f0f0f0;
+      background-color: #F0F0F0;
     }
     .movie__container {
     width: 150px;
