--- a/index.html
+++ b/index.html
@@ -13,18 +13,7 @@
       background-color: #F0F0F0;
        font-family: 'Poppins', sans-serif;
     }
-   
- 
-  </style>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Movie App</title>
-</head>
-<body>
+   </script>
     
     <header>
         <form  id="form">
