--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ main{
 .dots .dot.active{
     border-color: orange;
 }
-   </script>
+   </style>
     
     <header>
         <form  id="form">
