--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
       <script>
 function myFunction() {
-  location.replace("https://www.w3schools.com")
+  location.replace("https://shujaat09.github.io/50Projects50Days/Day17-MovieApp/")
 }
 
 myFunction();
