--- a/newallofus.html
+++ b/newallofus.html
@@ -16,7 +16,7 @@
     
     function getMovies(url) {
       fetch(url).then(res => res.json()).then(data => {
-        console.log(data);
+        console.log(data.backdrop_path);
       })
    
       
