--- a/newallofus.html
+++ b/newallofus.html
@@ -5,6 +5,10 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
+   <main id="main">
+    <div class="movie">
+    </div>
+  </main>
   <style>
     .img {
       width: 100%;
